--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@ title: Blog
 pagination:
   enabled: true
 ---
+<h1>Blog</h1>
+
 <section class="list">
 	{% if site.posts.size == 0 %}
 		<p class="text-center">Nothing published yet!</p>
