added a blogpost and some papers; fixed some formatting issues and refurbished about section

--- a/about.html
+++ b/about.html
@@ -12,12 +12,16 @@ layout: page
 
 {% include social-links.html %} 
 </header><br>
-<p align="justify">I obtained my PhD at the Karlsruhe Institute of Technology (KIT) in applied artificial intelligence with a strong focus on meta and transfer machine learning technologies. While conducting my PhD, I worked on various data science and AI projects, published multiple papers to scientific outlets and was a visiting researcher at the MIT-IBM Watson AI Lab in Boston.</p>
+<p align="justify">I obtained my PhD at the <a href="http://www.kit.edu/" target="_blank">Karlsruhe Institute of Technology (KIT)</a> in applied artificial intelligence 
+    with a strong focus on meta and transfer machine learning technologies. While conducting my PhD, I worked on various data science and AI projects, published <a href="/publications/">multiple papers</a> to scientific outlets and was a visiting researcher at the <a href="https://mitibmwatsonailab.mit.edu/" target="_blank">MIT-IBM Watson AI Lab</a> in Boston.</p>
 <p align="justify">
-To bring technical innovation into practice, I co-founded prenode GmbH with my friend and colleague Ronny as a spin-off from research. Here, my team and I develop a managed federated learning solution that incorporates cutting-edge algorithms to scale secure and distributed AI.
+To bring technical innovation into practice, I co-founded <a href="http://www.prenode.de" target="_blank">prenode</a> with my friend and colleague Ronny as a spin-off from research. 
+Here, my team and I develop a managed federated learning solution that incorporates cutting-edge algorithms to scale secure and distributed AI. As we believe in an open knowledge exchange, we actively publish some of our results that we think might be interesting for others who face similar challenges.
 </p>
 
 <div class="row">
+An excerpt of my CV. For more information, <a href="https://www.linkedin.com/in/robinhirt" target="_blank">connect on LinkedIn</a>:
+<br><br><br>
 {% include about/timeline.html %}
 </div>
 
